gymcrm/src/main/java/com/example/gymcrm/api/rest/error/exception/TraineeRegistrationException.java
package com.example.gymcrm.api.rest.error.exception;

public class TraineeRegistrationException extends RuntimeException {
    public TraineeRegistrationException(String message) {
        super(message);
    }
}
